CSS: modal share => fixed input + button group width on mobile devices #325

--- a/client/app/views/styles/_responsive.styl
+++ b/client/app/views/styles/_responsive.styl
@@ -38,6 +38,12 @@
         #share-list img
             display: none
 
+    #cozy-clearance-modal .input-group input
+        width 75%
+
+    #cozy-clearance-modal .input-group a.btn
+        width 25%
+
 @media (max-width: 768px)
     // Landscape phone to portrait tablet
 
